[gd_scene load_steps=39 format=4 uid="uid://dm2gjidl1pws5"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_ml3fd"]
[ext_resource type="FontFile" uid="uid://bu0a23vdmliiy" path="res://media/fonts/CastlevaniaNES.otf" id="2_3e0pq"]
[ext_resource type="Theme" uid="uid://01naekklebon" path="res://scenes/theme.tres" id="2_kytct"]
[ext_resource type="Script" path="res://scripts/score_counter.gd" id="3_4f751"]
[ext_resource type="Texture2D" uid="uid://cv105gtfxn6u3" path="res://media/graphics/player_healthbar.png" id="3_a2qj5"]
[ext_resource type="Script" path="res://scripts/stage_label.gd" id="3_wcg8v"]
[ext_resource type="Script" path="res://scripts/health_bar.gd" id="4_hyd55"]
[ext_resource type="Script" path="res://scripts/time_label.gd" id="4_olqpy"]
[ext_resource type="Texture2D" uid="uid://b17wp7eu76yir" path="res://media/graphics/empty_healthbar.png" id="4_ux4al"]
[ext_resource type="Texture2D" uid="uid://bg1cam8shkxe1" path="res://media/graphics/enemy_healthbar.png" id="5_ip3yo"]
[ext_resource type="Texture2D" uid="uid://be4ayy6v0com6" path="res://media/graphics/subweapon_container.png" id="6_qm5vt"]
[ext_resource type="Texture2D" uid="uid://hfqx1mlweo18" path="res://media/graphics/heart_icon.png" id="7_5hip0"]
[ext_resource type="Script" path="res://scripts/subweapon_container.gd" id="12_40b1c"]
[ext_resource type="Script" path="res://scripts/hearts_counter.gd" id="13_plm4k"]
[ext_resource type="Script" path="res://scripts/lives_label.gd" id="14_5i80s"]
[ext_resource type="PackedScene" uid="uid://b8a8fl14ivr47" path="res://scenes/game_over.tscn" id="15_jld33"]
[ext_resource type="PackedScene" uid="uid://i7cpmtm5t7sl" path="res://scenes/title_screen.tscn" id="16_en5xr"]
[ext_resource type="Texture2D" uid="uid://cqcetalmr55gk" path="res://media/graphics/doubler.png" id="16_ursnk"]
[ext_resource type="Script" path="res://scripts/multiplier_display.gd" id="17_xj6to"]
[ext_resource type="PackedScene" uid="uid://ccyrkr374lqo4" path="res://scenes/logos.tscn" id="18_j6eax"]
[ext_resource type="Script" path="res://scripts/input_display.gd" id="19_nno4e"]
[ext_resource type="Shader" path="res://shaders/screen_palette_swap.gdshader" id="19_t4gdl"]
[ext_resource type="Texture2D" uid="uid://dcty56mf6awww" path="res://media/graphics/left_display.png" id="20_c7d5d"]
[ext_resource type="Shader" path="res://shaders/screen_fade.gdshader" id="20_oj2do"]
[ext_resource type="Script" path="res://scripts/linear_audio_stream_player.gd" id="21_iem20"]
[ext_resource type="Texture2D" uid="uid://bc41kp00tjo3u" path="res://media/graphics/right_display.png" id="21_ofnga"]
[ext_resource type="Texture2D" uid="uid://dcn7xtjdgjb06" path="res://media/graphics/black_fade_palette.png" id="21_tbxeh"]
[ext_resource type="Texture2D" uid="uid://b7iptj40p7yxv" path="res://media/graphics/up_display.png" id="22_smarw"]
[ext_resource type="Texture2D" uid="uid://tgf334w6rkgw" path="res://media/graphics/down_display.png" id="23_6nhk0"]
[ext_resource type="Texture2D" uid="uid://44fi3hjpeqpr" path="res://media/graphics/start_display.png" id="24_5c8u3"]
[ext_resource type="Texture2D" uid="uid://d2ttaedmcu41c" path="res://media/graphics/select_display.png" id="25_rpke7"]
[ext_resource type="Texture2D" uid="uid://dvcps0mo1kkwy" path="res://media/graphics/b_display.png" id="26_ueaxd"]
[ext_resource type="Texture2D" uid="uid://p3x1jv6xxhsq" path="res://media/graphics/a_display.png" id="27_x8vg0"]
[ext_resource type="PackedScene" uid="uid://wjd53324tc65" path="res://scenes/konami_code_detector.tscn" id="29_s2xti"]
[ext_resource type="PackedScene" uid="uid://dkljxn86jf6ui" path="res://scenes/options_screen.tscn" id="30_ofj4p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2ieu"]
content_margin_top = 3.0
bg_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2xm82"]
shader = ExtResource("19_t4gdl")
shader_parameter/original_palette = PackedVector4Array(0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1)
shader_parameter/new_palettes = PackedVector4Array(0.678, 0.678, 0.678, 1, 0.678, 0.678, 0.678, 1, 0.678, 0.678, 0.678, 1)
shader_parameter/num_new_palettes = 1
shader_parameter/FPS = 60.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_virwn"]
shader = ExtResource("20_oj2do")
shader_parameter/start_time = 0.0
shader_parameter/fade_length = 1.0
shader_parameter/backwards = false
shader_parameter/palette = ExtResource("21_tbxeh")

[node name="Game" type="Node2D"]
script = ExtResource("1_ml3fd")

[node name="GUI" type="CanvasLayer" parent="."]

[node name="GlitchFix" type="ColorRect" parent="GUI"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(1, 1, 1, 0)

[node name="Blackout" type="ColorRect" parent="GUI"]
process_mode = 3
visible = false
offset_right = 384.0
offset_bottom = 216.0
color = Color(0, 0, 0, 1)

[node name="Game Over" parent="GUI" instance=ExtResource("15_jld33")]
process_mode = 4
visible = false

[node name="HUD" type="PanelContainer" parent="GUI"]
offset_right = 384.0
offset_bottom = 35.0
theme = ExtResource("2_kytct")
theme_override_styles/panel = SubResource("StyleBoxFlat_n2ieu")

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/HUD"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/HUD/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Score" type="Label" parent="GUI/HUD/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "SCORE-000000"
max_lines_visible = 1
script = ExtResource("3_4f751")

[node name="Spacer" type="Control" parent="GUI/HUD/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Time" type="Label" parent="GUI/HUD/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "TIME 0300"
max_lines_visible = 1
script = ExtResource("4_olqpy")

[node name="Spacer2" type="Control" parent="GUI/HUD/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Stage" type="Label" parent="GUI/HUD/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "STAGE 01"
max_lines_visible = 1
script = ExtResource("3_wcg8v")

[node name="HBoxContainer2" type="HBoxContainer" parent="GUI/HUD/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/HUD/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Player" type="Label" parent="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "PLAYER"
max_lines_visible = 1

[node name="PlayerHealthBar" type="MarginContainer" parent="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("timer", "remaining_hp")]
layout_mode = 2
theme_override_constants/margin_top = 1
script = ExtResource("4_hyd55")
timer = NodePath("Timer")
remaining_hp = NodePath("HBoxContainer/TextureRect")

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/PlayerHealthBar"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/PlayerHealthBar/HBoxContainer"]
texture_repeat = 2
custom_minimum_size = Vector2(64, 6)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_a2qj5")
expand_mode = 1
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/PlayerHealthBar/HBoxContainer"]
texture_repeat = 2
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource("4_ux4al")
expand_mode = 1
stretch_mode = 1

[node name="Timer" type="Timer" parent="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/PlayerHealthBar"]
wait_time = 0.133

[node name="HBoxContainer2" type="HBoxContainer" parent="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Enemy" type="Label" parent="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3e0pq")
theme_override_font_sizes/font_size = 16
text = "ENEMY "
max_lines_visible = 1

[node name="EnemyHealthBar" type="MarginContainer" parent="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2" node_paths=PackedStringArray("timer", "remaining_hp")]
layout_mode = 2
theme_override_constants/margin_top = 1
script = ExtResource("4_hyd55")
timer = NodePath("Timer")
remaining_hp = NodePath("HBoxContainer/TextureRect")

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2/EnemyHealthBar"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2/EnemyHealthBar/HBoxContainer"]
texture_repeat = 2
custom_minimum_size = Vector2(64, 6)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("5_ip3yo")
expand_mode = 1
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2/EnemyHealthBar/HBoxContainer"]
texture_repeat = 2
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource("4_ux4al")
expand_mode = 1
stretch_mode = 1

[node name="Timer" type="Timer" parent="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2/EnemyHealthBar"]
wait_time = 0.133

[node name="Spacer" type="Control" parent="GUI/HUD/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer5" type="Control" parent="GUI/HUD/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="GUI/HUD/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 0

[node name="SubweaponContainer" type="TextureRect" parent="GUI/HUD/VBoxContainer/HBoxContainer2/MarginContainer"]
layout_mode = 2
texture = ExtResource("6_qm5vt")
script = ExtResource("12_40b1c")

[node name="TextureRect" type="TextureRect" parent="GUI/HUD/VBoxContainer/HBoxContainer2/MarginContainer/SubweaponContainer"]
layout_mode = 0
offset_left = 8.0
offset_top = 3.0
offset_right = 24.0
offset_bottom = 19.0
stretch_mode = 2

[node name="Spacer2" type="Control" parent="GUI/HUD/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="GUI/HUD/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("7_5hip0")
stretch_mode = 2

[node name="Hearts" type="Label" parent="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "-00"
script = ExtResource("13_plm4k")

[node name="Lives" type="Label" parent="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "P-00"
script = ExtResource("14_5i80s")

[node name="Spacer3" type="Control" parent="GUI/HUD/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Multiplier" type="TextureRect" parent="GUI/HUD/VBoxContainer/HBoxContainer2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("16_ursnk")
stretch_mode = 2
script = ExtResource("17_xj6to")

[node name="FlashTimer" type="Timer" parent="GUI/HUD/VBoxContainer/HBoxContainer2/Multiplier"]
wait_time = 0.067
one_shot = true

[node name="Spacer4" type="Control" parent="GUI/HUD/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputDisplay" type="Control" parent="GUI" node_paths=PackedStringArray("left_display", "right_display", "up_display", "down_display", "start_display", "select_display", "a_display", "b_display")]
layout_mode = 3
anchors_preset = 0
offset_left = 104.0
offset_top = 3.0
offset_right = 384.0
offset_bottom = 35.0
script = ExtResource("19_nno4e")
left_display = NodePath("Left")
right_display = NodePath("Right")
up_display = NodePath("Up")
down_display = NodePath("Down")
start_display = NodePath("Start")
select_display = NodePath("Select")
a_display = NodePath("A")
b_display = NodePath("B")

[node name="Left" type="TextureRect" parent="GUI/InputDisplay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("20_c7d5d")
stretch_mode = 2

[node name="Right" type="TextureRect" parent="GUI/InputDisplay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("21_ofnga")
stretch_mode = 2

[node name="Up" type="TextureRect" parent="GUI/InputDisplay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("22_smarw")
stretch_mode = 2

[node name="Down" type="TextureRect" parent="GUI/InputDisplay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("23_6nhk0")
stretch_mode = 2

[node name="Start" type="TextureRect" parent="GUI/InputDisplay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("24_5c8u3")
stretch_mode = 2

[node name="Select" type="TextureRect" parent="GUI/InputDisplay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("25_rpke7")
stretch_mode = 2

[node name="B" type="TextureRect" parent="GUI/InputDisplay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("26_ueaxd")
stretch_mode = 2

[node name="A" type="TextureRect" parent="GUI/InputDisplay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("27_x8vg0")
stretch_mode = 2

[node name="TitleScreen" parent="GUI" instance=ExtResource("16_en5xr")]
process_mode = 4
visible = false

[node name="KonamiCodeDetector" parent="GUI/TitleScreen" instance=ExtResource("29_s2xti")]

[node name="OptionsScreen" parent="GUI" instance=ExtResource("30_ofj4p")]
process_mode = 4
visible = false

[node name="Logos" parent="GUI" instance=ExtResource("18_j6eax")]

[node name="FullBlackout" type="ColorRect" parent="GUI"]
process_mode = 3
visible = false
offset_right = 384.0
offset_bottom = 216.0
color = Color(0, 0, 0, 1)

[node name="ThankYou" type="Label" parent="GUI"]
visible = false
offset_right = 384.0
offset_bottom = 216.0
theme = ExtResource("2_kytct")
text = "THANK YOU FOR PLAYING!

PLEASE MAKE SURE TO FILL OUT
THE FEEDBACK FORM.

FINAL SCORE-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera" type="Camera2D" parent="."]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
script = ExtResource("21_iem20")

[node name="DebugWindow" type="Window" parent="."]
process_mode = 3
transparent_bg = true
mode = 1
initial_position = 1
size = Vector2i(768, 432)
visible = false
transient = true

[node name="Camera2D" type="Camera2D" parent="DebugWindow"]

[node name="CameraOutline" type="ColorRect" parent="DebugWindow"]
offset_right = 384.0
offset_bottom = 216.0
color = Color(1, 1, 1, 0)

[node name="ReferenceRect" type="ReferenceRect" parent="DebugWindow/CameraOutline"]
layout_mode = 0
offset_right = 385.0
offset_bottom = 217.0
border_color = Color(0.333058, 0.387977, 1, 1)
editor_only = false

[node name="TimeTimer" type="Timer" parent="."]
process_callback = 0

[node name="DeathTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 1.6
one_shot = true

[node name="BlackScreenTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.383
one_shot = true

[node name="ShortBlackScreenTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.13
one_shot = true

[node name="LogosTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.3
one_shot = true

[node name="TimeStopTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.73
one_shot = true

[node name="StartTimeCountdownTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 4.0
one_shot = true

[node name="StartHeartsCountdownTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.833
one_shot = true

[node name="GoToNextLevelTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 1.9
one_shot = true

[node name="Flash" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Flash"]
visible = false
material = SubResource("ShaderMaterial_2xm82")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Fade" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Fade"]
visible = false
material = SubResource("ShaderMaterial_virwn")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="enemy_hp_changed" from="." to="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2/EnemyHealthBar" method="_hp_changed"]
[connection signal="hearts_changed" from="." to="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/Hearts" method="_hearts_changed"]
[connection signal="lives_changed" from="." to="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer2/Lives" method="_lives_changed"]
[connection signal="max_subweapons_changed" from="." to="GUI/HUD/VBoxContainer/HBoxContainer2/Multiplier" method="_on_max_subweapons_changed"]
[connection signal="player_hp_changed" from="." to="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/PlayerHealthBar" method="_hp_changed"]
[connection signal="score_changed" from="." to="GUI/HUD/VBoxContainer/HBoxContainer/Score" method="_score_changed"]
[connection signal="stage_changed" from="." to="GUI/HUD/VBoxContainer/HBoxContainer/Stage" method="update_label"]
[connection signal="subweapon_changed" from="." to="GUI/HUD/VBoxContainer/HBoxContainer2/MarginContainer/SubweaponContainer" method="_on_subweapon_changed"]
[connection signal="time_left_changed" from="." to="GUI/HUD/VBoxContainer/HBoxContainer/Time" method="_time_changed"]
[connection signal="continue_game" from="GUI/Game Over" to="." method="_on_continue_game"]
[connection signal="end_game" from="GUI/Game Over" to="." method="_on_end_game"]
[connection signal="timeout" from="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/PlayerHealthBar/Timer" to="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/PlayerHealthBar" method="_update_hp_display"]
[connection signal="timeout" from="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2/EnemyHealthBar/Timer" to="GUI/HUD/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2/EnemyHealthBar" method="_update_hp_display"]
[connection signal="timeout" from="GUI/HUD/VBoxContainer/HBoxContainer2/Multiplier/FlashTimer" to="GUI/HUD/VBoxContainer/HBoxContainer2/Multiplier" method="_on_flash_timer_timeout"]
[connection signal="select_options" from="GUI/TitleScreen" to="." method="_on_title_screen_select_options"]
[connection signal="select_quit" from="GUI/TitleScreen" to="." method="_on_title_screen_select_quit"]
[connection signal="select_start" from="GUI/TitleScreen" to="." method="_on_title_screen_select_start"]
[connection signal="selected_exit" from="GUI/OptionsScreen" to="." method="_on_exited_options_menu"]
[connection signal="close_requested" from="DebugWindow" to="." method="_on_debug_window_close_requested"]
[connection signal="timeout" from="TimeTimer" to="." method="_on_time_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="BlackScreenTimer" to="." method="_on_black_screen_timer_timeout"]
[connection signal="timeout" from="ShortBlackScreenTimer" to="." method="_on_short_black_screen_timer_timeout"]
[connection signal="timeout" from="TimeStopTimer" to="." method="_on_time_stop_timer_timeout"]
[connection signal="timeout" from="StartTimeCountdownTimer" to="." method="_on_start_time_countdown_timer_timeout"]
[connection signal="timeout" from="StartHeartsCountdownTimer" to="." method="_on_start_hearts_countdown_timer_timeout"]
[connection signal="timeout" from="GoToNextLevelTimer" to="." method="_on_go_to_next_level_timer_timeout"]
